--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,3 +38,15 @@
     text-align: center;
     padding-bottom: 10px;
 }
+
+ion-title {
+    text-align: center;
+}
+
+ion-content {
+    --background: none;
+    background-image: url('https://i.pinimg.com/474x/33/46/18/3346182bd3ae2f87a0f5fcec453904f4.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
