--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      My App
+      <b>Articles</b>
     </ion-title>
   </ion-toolbar>
 </ion-header>
