--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home2</ion-title>
+    <ion-title><b>Article Data</b></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content text-center>
   <br>
-<ion-button [routerLink]="['/emotiondetection']" expand="block" color="danger">sentment analysis</ion-button>
+<ion-button [routerLink]="['/emotiondetection']" expand="block" color="primary" background-color="grey">Responsive analysis </ion-button>
   <br>
   
 </ion-content>
