--- a/src/app/regestration/regestration.page.html
+++ b/src/app/regestration/regestration.page.html
@@ -31,7 +31,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Sign Up</ion-button>
+        <ion-button [routerLink]="['/login']" expand="block" color="danger">submit</ion-button>
       </ion-col>
     </ion-row>
   </form>
